Fix overflow bug in Profile

--- a/src/components/pages/profile/Profile.module.css
+++ b/src/components/pages/profile/Profile.module.css
@@ -65,6 +65,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 3px;
+
+  overflow: hidden;
 }
 
 .postGrid {
